force-app/main/default/objects/FIN_Payee__c/FIN_Payee__c.object-meta.xml
<CustomObject>
    <label>Remittance Account</label>
    <nameField>
        <displayFormat>RA-{0000000000}</displayFormat>
        <label>Payee</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Remittance Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>