force-app/main/default/objects/FIN_Payee__c/fields/FIN_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>FIN_Account_Type__c</fullName>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Checking</fullName>
                <default>true</default>
                <label>Checking</label>
            </value>
            <value>
                <fullName>Savings</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>