force-app/main/default/objects/FIN_Payee__c/fields/FIN_Active__c.field-meta.xml
<CustomField>
    <fullName>FIN_Active__c</fullName>
    <formula>TODAY() &gt;= FIN_StartDate__c &amp;&amp; TODAY() &lt;= FIN_EndDate__c || ISNULL(FIN_EndDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>