force-app/main/default/objects/FIN_Payee__c/fields/FIN_AttachW9__c.field-meta.xml
<CustomField>
    <fullName>FIN_AttachW9__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attach W-9</label>
    <type>Checkbox</type>
</CustomField>