force-app/main/default/objects/FIN_Payee__c/fields/FIN_BankCode_Template__c.field-meta.xml
<CustomField>
    <fullName>FIN_BankCode_Template__c</fullName>
    <externalId>true</externalId>
    <label>Bank Code/Template</label>
    <length>100</length>
    <type>Text</type>
</CustomField>