force-app/main/default/objects/FIN_Payee__c/fields/FIN_Beneficiary_ID__c.field-meta.xml
<CustomField>
    <fullName>FIN_Beneficiary_ID__c</fullName>
    <label>Beneficiary ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>