force-app/main/default/objects/FIN_Payee__c/fields/FIN_JDE_Address__c.field-meta.xml
<CustomField>
    <fullName>FIN_JDE_Address__c</fullName>
    <label>JDE Address</label>
    <length>20</length>
    <type>Text</type>
</CustomField>