force-app/main/default/objects/FIN_Payee__c/fields/FIN_LegalName__c.field-meta.xml
<CustomField>
    <fullName>FIN_LegalName__c</fullName>
    <label>Beneficiary Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>