force-app/main/default/objects/FIN_Payee__c/fields/FIN_Nickname__c.field-meta.xml
<CustomField>
    <fullName>FIN_Nickname__c</fullName>
    <label>Nickname</label>
    <length>100</length>
    <type>Text</type>
</CustomField>