force-app/main/default/objects/FIN_Payee__c/fields/FIN_Note__c.field-meta.xml
<CustomField>
    <fullName>FIN_Note__c</fullName>
    <inlineHelpText>Short Note limited to 255 characters</inlineHelpText>
    <label>Note</label>
    <length>250</length>
    <type>Text</type>
</CustomField>