force-app/main/default/objects/FIN_Payee__c/fields/FIN_Remittance_Account__c.field-meta.xml
<CustomField>
    <fullName>FIN_Remittance_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DELETE Remittance Account</label>
    <referenceTo>FIN_Remittance_Account__c</referenceTo>
    <relationshipLabel>Remittance Accounts</relationshipLabel>
    <relationshipName>Remittance_Account</relationshipName>
    <type>Lookup</type>
</CustomField>