force-app/main/default/objects/FIN_Payee__c/fields/FIN_StartDate__c.field-meta.xml
<CustomField>
    <fullName>FIN_StartDate__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>