force-app/main/default/objects/FIN_Payee__c/fields/FIN_Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>FIN_Tax_ID__c</fullName>
    <label>Tax ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>