force-app/main/default/objects/FIN_Payee__c/fields/Routing__c.field-meta.xml
<CustomField>
    <fullName>Routing__c</fullName>
    <label>Routing</label>
    <length>9</length>
    <maskChar>X</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>