force-app/main/default/objects/FIN_Payee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FIN_Beneficiary_ID__c</columns>
    <columns>FIN_LegalName__c</columns>
    <columns>FIN_DBA__c</columns>
    <columns>FIN_Account__c</columns>
    <columns>FIN_Account_Type__c</columns>
    <columns>FIN_JDE_Address__c</columns>
    <columns>FIN_Tax_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>